[package]
name = "riffol"
version = "0.1.0"
authors = ["John Hedges <john@drystone.co.uk>"]
build = "build.rs"

[dependencies]
chan-signal = "0.3"
libc = "0.2"
log = "0.4"
mio = "0.6"
nereon = "0.1"
nix = "0.11"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
slab = "0.4"
stderrlog = "0.4"
syslog = "4.0"
