[package]
name = "riffol"
version = "0.1.1"
authors = ["John Hedges <john@drystone.co.uk>"]
license = "BSD-2-Clause"

[dependencies]
chan-signal = "0.3"
libc = "0.2"
log = "0.4"
mio = "0.6"
nereon = {version = "0.3", path = "../rust-nereon"}
nereon_derive = {version = "0.2", path = "../rust-nereon/derive"}
nix = "0.11"
slab = "0.4"
stderrlog = "0.4"
syslog = "4.0"
